<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_clear_recent">刪除記錄</string>
    <string name="action_comment_page">跳頁</string>
    <string name="action_delete_comic">刪除漫畫</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="alert_account_not_activated">"這個帳戶還沒有被激活！

請前往你註冊的郵箱並找尋【嗶咔邀請函】（有機會在垃圾郵件中）！

如找不到邀請函郵件，請按下方的重新發送邀請函！"</string>
    <string name="alert_action_ai_script_title">AI 模式</string>
    <string name="alert_action_change_title">更變稱號</string>
    <string name="alert_already_exist_email">"這個嗶咔帳號已經被註冊！

如果你忘記了密碼，請回上一頁按忘記密碼！"</string>
    <string name="alert_already_exist_name">"這個匿稱已經屬於一位紳士
請使用別的匿稱！"</string>
    <string name="alert_anonymous_not_match">"找不到交配對象！

請再試一次！"</string>
    <string name="alert_apk_verison_must_update">對不起，你必須更新版本</string>
    <string name="alert_apk_verison_ok">官方下載</string>
    <string name="alert_apk_verison_ok_mirror">鏡像下載</string>
    <string name="alert_apk_version_prefix">發現更新－Ver.</string>
    <string name="alert_block_user_content">"是否封鎖此用戶？
封鎖後無法解鎖"</string>
    <string name="alert_block_user_positive">封鎖</string>
    <string name="alert_block_user_title">封鎖用戶</string>
    <string name="alert_bookmark_canceled">已取消收藏</string>
    <string name="alert_bookmarked">已收藏</string>
    <string name="alert_button_do_not_show_again">不再顯示</string>
    <string name="alert_cannot_start_with_pica">嗶咔是註冊商標，不能用的。</string>
    <string name="alert_chat_rule">"▲只談風月，不談政事 

 ▲相互尊重，善意推定 

 ▲沒有什麼是理所當然的 

 ▲請愛惜嗶咔，珍惜眼前 

 以上四條為總綱 


"</string>
    <string name="alert_chat_rule_title">【嗶咔聊天測試板板規】</string>
    <string name="alert_chatroom_is_not_ready">"欸...!?

嗶咔聊天室還未正式開放的樣子...
請等待下一個版本吧..."</string>
    <string name="alert_chatroom_leave_msg">"嗚嗚嗚...
嗚嗚...嗚...

你真的要離開聊天室嗎？

嗚......"</string>
    <string name="alert_chatroom_leave_title">從聊天室逃走</string>
    <string name="alert_clear_all_recent_message">"你是否刪除所有觀看記錄，包括最後觀看話數及頁數？

確定以後就無法復原的喔！"</string>
    <string name="alert_clear_all_recent_success">已刪除所有記錄！</string>
    <string name="alert_clear_all_recent_title">刪除所有觀看記錄</string>
    <string name="alert_clear_recent_message">"你是否刪除觀看記錄，包括最後觀看話數及頁數？

確定以後就無法復原的喔！"</string>
    <string name="alert_clear_recent_success">已刪除記錄！</string>
    <string name="alert_clear_recent_title">刪除觀看記錄</string>
    <string name="alert_continue_download_comic">你是否需要繼續下載還沒有完成下載的漫畫？</string>
    <string name="alert_continue_download_comic_title">繼續下載漫畫</string>
    <string name="alert_copied">已成功複製！</string>
    <string name="alert_delete_downloaded_comic">"你確定要刪除這本漫畫嗎？

刪除內容包括所有已下載的圖片及數據。"</string>
    <string name="alert_delete_downloaded_comic_title">刪除漫畫</string>
    <string name="alert_dialog_select_title">請選擇</string>
    <string name="alert_download_not_allow">此本子已暫停下載功能</string>
    <string name="alert_download_not_allow_title">無法下載</string>
    <string name="alert_download_not_ready">下載功能還沒弄好的樣子...？請先在線上看吧</string>
    <string name="alert_edit_page_is_not_ready">"嘛...

小紳紳的頭像是可以修改的，但其他資料還未不開。

看來要等待下一個版本吧..."</string>
    <string name="alert_edit_profile_question_error">請填寫好所有「忘記密碼」用的問題及答案！</string>
    <string name="alert_empty_comment">偉論再怎麼少也要有1個字以上才對喵？</string>
    <string name="alert_empty_email">請填寫好嗶咔帳號！</string>
    <string name="alert_empty_name">請填寫好匿稱 (2-50字)！</string>
    <string name="alert_empty_password">請填寫好密碼（8字以上！）</string>
    <string name="alert_fake_email">"嗶咔娘認定你的是假冒電郵！！

請確認你的電郵地址可以收到邀請函郵件，你還有不多於十次的機會！"</string>
    <string name="alert_forgot_password_success">一封密函已送往你的電郵地址，請跟隨指示重設密碼！</string>
    <string name="alert_general_error">"嗶咔嗶咔被玩壞了!

這肯定不是嗶咔的問題！
絕對不是！"</string>
    <string name="alert_gift_not_ready">嘛...禮包功能還沒弄好的樣子...？請直接找騎士問問吧！</string>
    <string name="alert_hide_comment">"你確定要把這個留言隱藏嗎？

留言一但被隱藏就無法復原的喔！！！！

"</string>
    <string name="alert_hide_comment_title">【留言隱藏警告】</string>
    <string name="alert_invalid_email_or_password">你輸入的帳戶資料並不正確哦，請重新輸入！</string>
    <string name="alert_leave">"嗚嗚嗚...
嗚嗚...嗚...

你真的要離開我嗎？

嗚......"</string>
    <string name="alert_level_not_high_enough_to_comment">"小紳紳的等級不夠或者沒有認證帳戶！

認證了的帳戶等級2才能留言唷～

你可以打嗶卡和更換頭像升等級的～"</string>
    <string name="alert_level_up">"升級了！

小紳紳又長大了！"</string>
    <string name="alert_like_canceled">已取消讚好</string>
    <string name="alert_liked">已讚好</string>
    <string name="alert_no_permission">對不起...我無法取得修改亮度權限...</string>
    <string name="alert_not_chosen_birthday">"還沒有選擇出生日期唷！

生日當天會有福利給你，給我好好的選啊！"</string>
    <string name="alert_not_enough_18">聽說...你還沒有成年...？你懂的...</string>
    <string name="alert_not_found">"欸...!?

404 找不到"</string>
    <string name="alert_not_same_password">密碼和確認密碼不同！</string>
    <string name="alert_not_support_email">"我們不支授此郵箱...

QQ和163電郵君不想跟我們做朋友，所以請你用其他電郵服務商吧。例如：Gmail, Yahoo 和 Outlook"</string>
    <string name="alert_pica_id_wrong">請填寫正確的嗶咔帳號！</string>
    <string name="alert_pin_password_length">屏蔽密碼必須4個數字！</string>
    <string name="alert_post_comment_too_frequent">"作為紳士，發表偉論時必須要注意優雅，不要污...

（你的心中很認同，所以決定多等一會兒再發表其他偉論）"</string>
    <string name="alert_post_reply_too_frequent">再怎麼想吐糟，也不能回得太快呢...</string>
    <string name="alert_punch_in_success">你已經成功打嗶咔</string>
    <string name="alert_register_success">你已經可以直接登入嗶咔！</string>
    <string name="alert_register_success_title">註冊完成！</string>
    <string name="alert_register_warning">"你確定這是能接收郵件的電郵地址嗎？

如果是假的，你有可能被嗶咔娘永久封鎖哦！"</string>
    <string name="alert_register_warning_title">封鎖警告</string>
    <string name="alert_remove_all_comment_content">是否刪除此用戶的所有留言？</string>
    <string name="alert_remove_all_comment_positive">刪除</string>
    <string name="alert_remove_all_comment_title">刪除所有留言</string>
    <string name="alert_report_comment">"你確定要舉報這個留言嗎？

留言一但舉報就無法回收的喔！！！！

"</string>
    <string name="alert_report_comment_title">【舉報留言警告】</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="comic_list_filter_button_bl">耽美</string>
    <string name="comic_list_filter_button_fake_girl">偽娘</string>
    <string name="comic_list_filter_button_forbidden">禁書</string>
    <string name="comic_list_filter_button_futari">扶她</string>
    <string name="comic_list_filter_button_heavy">重口</string>
    <string name="comic_list_filter_button_non_chinese">生肉</string>
    <string name="comic_list_filter_button_pure_love">純愛</string>
    <string name="comic_list_filter_button_webtoon">WEBTOON</string>
    <string name="comic_viewer_setting_panel_auto_paging">自動翻頁</string>
    <string name="comic_viewer_setting_panel_auto_start">開始</string>
    <string name="comic_viewer_setting_panel_comment">評論</string>
    <string name="comic_viewer_setting_panel_night_mode">夜間</string>
    <string name="comic_viewer_setting_panel_select_episode">選集</string>
    <string name="comic_viewer_toast_auto_paging_hint">點擊 \"設定\" 結束自動翻頁</string>
    <string name="comment_no_reply">邏沒有任何回覆! 要吐糟一下嗎...?</string>
    <string name="leaderboard_tab_popular_24hr">過去 24 小時</string>
    <string name="leaderboard_tab_popular_30days">過去 30 天</string>
    <string name="leaderboard_tab_popular_7days">過去 7 天</string>
    <string name="login_email">嗶咔帳號</string>
    <string name="login_forget_password">忘記密碼</string>
    <string name="login_login_button">紳士登入</string>
    <string name="login_password">密碼</string>
    <string name="login_register">免費注冊成為紳士</string>
    <string name="login_resend_activation">重發激活郵件</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="splash_error">無法連接服務器，請檢查你的網路連接是否正常。</string>
    <string name="splash_remark">如果不能連接或不能載圖，請嘗試分流【 2 】或 分流【 3 】</string>
    <string name="splash_retry">重新連接</string>
    <string name="splash_server_1">分流【 1 】</string>
    <string name="splash_server_2">分流【 2 】</string>
    <string name="splash_server_3">分流【 3 】</string>
    <string name="support_us_ads_title">▼ 拯救嗶咔，請點廣告 ▼</string>
    <string name="support_us_alipay_account">18659554802</string>
    <string name="support_us_alipay_account_title">大騎士的支援帳戶（點擊複製）</string>
    <string name="support_us_alipay_title">▼ 拯救嗶咔，從 支付宝 出發 ▼</string>
    <string name="support_us_game_title">▼ 拯救嗶咔，請下載嗶咔推薦遊戲 ▼</string>
    <string name="support_us_qq_title">▼ 拯救嗶咔，從 QQ 出發 ▼</string>
</resources>