<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/backgroundDark" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:background="@color/background" android:padding="@dimen/padding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_2" android:text="@string/support_us_qq_title" style="@style/TextBaseStylePinkContent2" />
        <com.picacomic.fregata.utils.views.SquareImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_2" android:src="@drawable/qq_wallet" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <TextView android:gravity="center" android:background="@color/background" android:padding="@dimen/padding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_2" android:text="@string/support_us_alipay_title" style="@style/TextBaseStylePinkContent2" />
        <TextView android:gravity="center" android:id="@id/textView_support_us_alipay_title" android:padding="@dimen/padding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_2" android:text="@string/support_us_alipay_account_title" android:textIsSelectable="true" style="@style/TextBaseStylePinkTitle3" />
        <TextView android:textStyle="bold" android:gravity="center" android:id="@id/textView_support_us_alipay" android:padding="@dimen/padding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding_2" android:layout_marginBottom="@dimen/padding_7" android:text="@string/support_us_alipay_account" android:textIsSelectable="true" style="@style/TextBaseStylePeachTitle1" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>