<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/coordinatorLayout" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="parallax" app:layout_scrollFlags="enterAlways|scroll" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" style="@style/AppTheme.PopupOverlay" />
        <LinearLayout android:orientation="horizontal" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="rtl">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layoutDirection="ltr">
                <EditText android:gravity="center|right" android:layout_gravity="center|right" android:id="@id/editText_comic_list_current_page" android:background="@color/transparent" android:padding="@dimen/padding_1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="40.0dip" android:text="1" android:digits="\ 1234567890" android:inputType="phone" android:imeOptions="actionDone" style="@style/EditTextStandardSingleLinePeach" />
                <TextView android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/" style="@style/TextBaseStyleGrayDarkContent2" />
                <TextView android:layout_gravity="center" android:id="@id/textView_comic_list_total_page" android:padding="@dimen/padding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" style="@style/TextBaseStyleGrayDarkContent2" />
            </LinearLayout>
            <HorizontalScrollView android:background="@color/background" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="ltr">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="ltr">
                    <Button android:id="@id/button_comic_list_filter_forbidden" android:background="@drawable/button_filter_forbidden_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_forbidden" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_japanese" android:background="@drawable/button_filter_japanese_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_non_chinese" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_bl" android:background="@drawable/button_filter_bl_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_bl" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_heavy" android:background="@drawable/button_filter_heavy_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_heavy" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_pure_love" android:background="@drawable/button_filter_pure_love_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_pure_love" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_fake_girl" android:background="@drawable/button_filter_fake_girl_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_fake_girl" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_futari" android:background="@drawable/button_filter_futari_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_futari" style="@style/FilterButton" />
                    <Button android:id="@id/button_comic_list_filter_webtoon" android:background="@drawable/button_filter_webtoon_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comic_list_filter_button_webtoon" style="@style/FilterButton" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/recyclerView_comic_list" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <FrameLayout android:id="@id/frameLayout_comic_list_no_comics" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <android.support.v4.widget.Space android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/imageView_comic_list_empty" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="3.0" style="@style/ImageViewBaseStyleFitCenter" />
                <android.support.v4.widget.Space android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment_no_reply" style="@style/TextBaseStyleGrayDarkContent1" />
        </LinearLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>