<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_login_fragment" android:background="@color/background" android:padding="@dimen/padding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/editText_login_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_email" android:maxLength="100" android:drawableLeft="@mipmap/login_mail" android:drawablePadding="@dimen/padding_2" android:imeOptions="actionNext" style="@style/EditTextStandardSingleLineGrayDark" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/editText_login_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_password" android:maxLength="100" android:drawableLeft="@mipmap/login_lock" android:drawablePadding="@dimen/padding_2" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/EditTextStandardSingleLineGrayDark" />
        </android.support.design.widget.TextInputLayout>
        <Button android:layout_gravity="center" android:id="@id/button_login_login_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/padding_2" android:text="@string/login_login_button" style="@style/ButtonRoundPink" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:layout_gravity="left" android:id="@id/button_login_register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_register" android:layout_weight="1.0" style="@style/ButtonTransparentBgPinkContent1" />
            <Button android:layout_gravity="center" android:id="@id/button_login_resend_activation" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_resend_activation" android:layout_weight="1.0" style="@style/ButtonTransparentBgPinkContent1" />
            <Button android:layout_gravity="right" android:id="@id/button_login_forget_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_forget_password" android:layout_weight="1.0" style="@style/ButtonTransparentBgPinkContent1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/linearLayout_login_fragment">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" />
        <ImageView android:id="@id/imageView_login_pica_logo" android:layout_width="fill_parent" android:layout_height="0.0px" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_weight="5.0" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>